<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud1"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_color"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="211dp"
            android:layout_height="162dp"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/sausage" />

        <EditText
            android:id="@+id/ed_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/identity_black_18dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:padding="10dp" />

        <EditText
            android:id="@+id/ed_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/lock_black_18dp"
            android:ems="10"
            android:hint="@string/Password"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/radius_buttons"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/SignIn"
            android:textColor="@color/red" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Or"
                android:textColor="@color/red"

                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_Login_Google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundGoogle"
            android:drawableLeft="@drawable/ic_google"
            android:paddingLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/SignInByGoogle"

            />

        <Button
            android:id="@+id/btn_Login_Facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/backgroundfacebook"
            android:drawableLeft="@drawable/ic_facebook"
            android:paddingLeft="15dp"
            android:text="@string/SignInByFacebook" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_QuenPassWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/QuenPassword"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:text="@string/SignUp"
                android:textColor="@color/white" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>