<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud1"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_color"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="211dp"
            android:layout_height="162dp"
            app:srcCompat="@drawable/sausage" />

        <EditText
            android:id="@+id/ed_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/identity_black_18dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="10dp" />

        <EditText
            android:id="@+id/ed_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/lock_black_18dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:padding="10dp" />

        <EditText
            android:id="@+id/ed_AgainPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/lock_black_18dp"
            android:ems="10"
            android:hint="@string/AgainPassword"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn_SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/radius_buttons"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/SignUp"
            android:textColor="@color/red" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/YouHadAccount"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/txt_SignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/SignIn"
                android:textColor="@color/red"
                android:textSize="17sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>