<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_home"
    >

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/white"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Latest"
            android:button="@android:color/transparent"
            android:background="@drawable/changebackgroud_radiobutton_tab"
            android:textAlignment="center"
            android:drawableBottom="@drawable/keyboard_arrow_down_black"
            android:textColor="@drawable/change_text_home"
            />
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/black"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Category"
            android:button="@android:color/transparent"
            android:background="@drawable/changebackgroud_radiobutton_tab"
            android:textAlignment="center"
            android:drawableBottom="@drawable/keyboard_arrow_down_black"
            android:textColor="@drawable/change_text_home"
            />
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/black"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Area"
            android:button="@android:color/transparent"
            android:background="@drawable/changebackgroud_radiobutton_tab"
            android:textAlignment="center"
            android:drawableBottom="@drawable/keyboard_arrow_down_black"
            android:textColor="@drawable/change_text_home"
            />
    </RadioGroup>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/change_backgroud_radiobutton_tab_content"
                    android:layout_margin="5dp"
                    android:text="@string/NearBy"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/nearby"
                    android:drawablePadding="10dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/change_backgroud_radiobutton_tab_content"
                    android:layout_margin="5dp"
                    android:text="@string/OrderDelivery"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/orderdelivery"
                    android:drawablePadding="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/change_backgroud_radiobutton_tab_content"
                    android:layout_margin="5dp"
                    android:text="@string/GameAndFun"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/ic_game"
                    android:drawablePadding="10dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/change_backgroud_radiobutton_tab_content"
                    android:layout_margin="5dp"
                    android:text="@string/TopMembers"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/ic_top"
                    android:drawablePadding="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/change_backgroud_radiobutton_tab_content"
                    android:layout_margin="5dp"
                    android:text="@string/Blogs"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/ic_blog"
                    android:drawablePadding="10dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/change_backgroud_radiobutton_tab_content"
                    android:layout_margin="5dp"
                    android:text="@string/Reviews"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/ic_review"
                    android:drawablePadding="10dp"
                    />
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_Food"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>