<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud1"
    >


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_color">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="50dp"
            android:layout_gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ForgotPassword"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Title"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="10dp"
                />

            <EditText
                android:id="@+id/ed_EmailReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/mail"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/btn_ResetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/radius_buttons"
                android:padding="10dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="Reset Password"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/YouHadnotAccount"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/txt_SignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/SignUp"
                    android:textColor="@color/red"

                    android:textSize="17sp" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>



</RelativeLayout>